# alchemy

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  build-emp-jni.sh  build_and_execute.sh  build_cpp.sh  pom.xml  prepare-tree-builder-plan.sh  run-alice.sh  run-bob.sh  run_remote.sh  select-bob.sql  setup.sh  smcql_runner.sh  truncate-tpch-set.sql  truncate-tpch.sql  update-expected-codegen.sh
cpp/: CMakeLists.txt  configure.sh  main.cpp
cpp/common/: macros.h
cpp/data/: CMakeLists.txt  DataProvider.cpp  PQDataProvider.h  proto_converter.cpp
cpp/java/: pom.xml
cpp/operators/: CMakeLists.txt
cpp/querytable/: CMakeLists.txt  dummy_flag.h  query_field.cpp  query_table.cpp  table_manager.h
cpp/querytable/expression/: expression.cpp
cpp/querytable/types/: CMakeLists.txt  bool_result.cpp  type.cpp  type.h  type_id.h  value.cpp
cpp/querytable/types/encrypted/: encrypted_integer_type.cpp
cpp/querytable/types/unencrypted/: boolean_type.cpp  integer_type.cpp  integer_type.h
cpp/rpc/: DBQueryClient.cpp  DBQueryClient.h
src/main/cpp/: .gitignore  CMakeLists.txt  Dockerfile  alice_orders.sql  benchmark-suite-alice.sh  benchmark-suite-bob.sh  benchmark-suite-column-store-alice.sh  benchmark-suite-column-store-bob.sh  benchmark-suite-column-store.sh  benchmark-suite.sh  bob_orders.sql  compile_commands.json  config.json  configure.sh  create-order-keys.sh  create_empty_db_bob.sql  get-latest-log-file.sh  install-packages.sh  main.cpp  parse-all-logs.sh  parse-log.py  reset-cmake.sh  run-aggregate-comparison-1.sh  run-aggregate-comparison-2.sh  run-alice.sh  run-aws-alice.sh  run-aws-bob.sh  run-baseline-comparison-1.sh  run-baseline-comparison-2.sh  run-bob.sh  run-column-store.sh  run-mpc-tests.sh  run-ompc.sh  run-pilot-test.sh  run-pilot.sh  run-plain-tests.sh  run-sort-plan-enumeration-1.sh  run-sort-plan-enumeration-2.sh  run-tests-alice.sh  run-tests-bob.sh  (+28 more)
src/main/cpp/cmake/: FindEMP.cmake  FindGMP.cmake  FindGperftools.cmake  common.cmake  not-used
src/main/cpp/common/: defs.h  macros.h
src/main/cpp/conf/: config.json  table_config.json  table_config_2000.json  table_config_300.json  table_config_600.json
src/main/cpp/data/: CMakeLists.txt  CsvReader.cpp  CsvReader.h  DataProvider.h  PQDataProvider.cpp  PQDataProvider.h  PsqlDataProvider.cpp  PsqlDataProvider.h  csv_reader.cpp  csv_reader.h  pq_oid_defs.h  pqxx_compat.cpp  pqxx_compat.h  proto_converter.cpp  proto_converter.h  proto_converter_test.cpp  psql_data_provider.cpp  psql_data_provider.h
src/main/cpp/enumerator/: bushy_plan_enumerator.cpp  bushy_plan_enumerator.h  join_graph.h
src/main/cpp/expression/: bool_expression.cpp  bool_expression.h  case_node.h  comparator_expression_nodes.cpp  comparator_expression_nodes.h  connector_expression_nodes.h  expression.h  expression_factory.cpp  expression_factory.h  expression_kind.h  expression_node.cpp  expression_node.h  expression_visitor.h  function_expression.cpp  function_expression.h  generic_expression.cpp  generic_expression.h  math_expression_nodes.cpp  math_expression_nodes.h
src/main/cpp/flagfiles/: alice.flags  bob-ompc.flags  bob.flags  chi-ompc.flags  chi.flags  cutoff.flags  db_names.flags  filter.flags  plain.flags  plan_enumeration.flags  storage.flags  tp-ompc.flags  tp.flags
src/main/cpp/not-used/: emp-int-to-float-cast.cpp  expression.cpp  utils.h  utils.hpp
src/main/cpp/operators/: CMakeLists.txt  aggregate_id.h  basic_join.cpp  basic_join.h  block_nested_loop_join.cpp  block_nested_loop_join.h  common_table_expression.cpp  common_table_expression.h  common_table_expression_input.cpp  common_table_expression_input.h  csv_input.cpp  csv_input.h  encrypted_sql_input.cpp  encrypted_sql_input.h  filter.cpp  filter.h  fkey_pkey_join.cpp  fkey_pkey_join.h  group_by_aggregate.cpp  group_by_aggregate.h  join.cpp  join.h  keyed_join.cpp  keyed_join.h  keyed_sort_merge_join.cpp  keyed_sort_merge_join.h  left_keyed_join.cpp  left_keyed_join.h  limit.cpp  limit.h  merge_input.cpp  merge_input.h  merge_join.cpp  merge_join.h  nested_loop_aggregate.cpp  nested_loop_aggregate.h  operator.cpp  operator.h  packed_table_scan.cpp  packed_table_scan.h  (+32 more)
src/main/cpp/opt/: expression_cost_model.cpp  expression_cost_model.h  join_graph.h  operator_cost_model.cpp  operator_cost_model.h  plan_cost.h  plan_cost_model.h  plan_enumerator.cpp  plan_enumerator.h  plan_optimizer.cpp  plan_optimizer.h
src/main/cpp/parser/: expression_deparser.cpp  expression_deparser.h  expression_parser.cpp  expression_parser.h  parse_plan.cpp  plan_deparser.cpp  plan_deparser.h  plan_parser.cpp  plan_parser.h
src/main/cpp/pilot/: CMakeLists.txt  reveal_public_column.cpp
src/main/cpp/query_table/: buffered_column_table.cpp  buffered_column_table.h  column_table.cpp  column_table.h  computing_party_packed_column_table.h  input_party_packed_column_table.h  packed_column_table.cpp  packed_column_table.h  plain_tuple.cpp  plain_tuple.h  query_field.cpp  query_field.h  query_field_desc.cpp  query_field_desc.h  query_schema.cpp  query_schema.h  query_table.cpp  query_table.h  query_tuple.cpp  query_tuple.h  row_table.cpp  row_table.h  secure_tuple.cpp  secure_tuple.h  table_factory.h  table_manager.cpp
src/main/cpp/querytable/: CMakeLists.txt  dummy_flag.cpp  private_share_utility.cpp  private_share_utility.h  query_field.cpp  query_field.h  query_field_desc.cpp  query_field_desc.h  query_schema.cpp  query_schema.h  query_table.cpp  query_table.h  query_tuple.cpp  query_tuple.h
src/main/cpp/rpc/: CMakeLists.txt  DBQueryClient.cpp  DBQueryClient.h
src/main/cpp/scripts/: add-benchmarking-results.sh  benchmark-suite-alice.sh  benchmark-suite-bob.sh  benchmark-suite.sh  generate-flamegraph.sh  generate_synched_phame_data_alice.sh  generate_synched_phame_data_bob.sh  io_monitor.sh  launch-tmux.sh  load-dbs.sh  parse-all-logs.sh  perf_script.sh  psql2csv.sh  reconnect-pilot-bob.sh  relink_libs.sh  reset-cmake.sh  reset-emp-macos-clion.sh  run-alice.sh  run-bob.sh  run-mpc-tests.sh  run-ompc-bnlj.sh  run-ompc-mem-limit.sh  run-ompc.sh  run-phame.sh  (+18 more)
(+1467 files in other folders)
